--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.8.1
 distlib==0.3.8
+dj-database-url==2.2.0
 Django==5.0.6
+django-ckeditor-5==0.2.13
 django-environ==0.11.2
 environ==1.0
 filelock==3.14.0
@@ -8,4 +10,5 @@ pillow==10.3.0
 platformdirs==4.2.2
 psycopg2-binary==2.9.9
 sqlparse==0.5.0
+typing_extensions==4.12.2
 virtualenv==20.26.2
