--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
 asgiref==3.8.1
+certifi==2024.8.30
+charset-normalizer==3.4.0
+cloudinary==1.41.0
 distlib==0.3.8
 dj-database-url==2.2.0
 Django==5.0.6
 django-ckeditor-5==0.2.13
+django-cloudinary-storage==0.3.0
 django-environ==0.11.2
 environ==1.0
 filelock==3.14.0
+idna==3.10
 pillow==10.3.0
 platformdirs==4.2.2
 psycopg2-binary==2.9.9
+requests==2.32.3
+six==1.16.0
 sqlparse==0.5.0
 typing_extensions==4.12.2
+urllib3==2.2.3
 virtualenv==20.26.2
