--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ django-cloudinary-storage==0.3.0
 django-environ==0.11.2
 environ==1.0
 filelock==3.14.0
+gunicorn==23.0.0
 idna==3.10
+packaging==24.1
 pillow==10.3.0
 platformdirs==4.2.2
 psycopg2-binary==2.9.9
