--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.8.1
+boto3==1.35.44
+botocore==1.35.44
 certifi==2024.8.30
 charset-normalizer==3.4.0
 cloudinary==1.41.0
@@ -8,15 +10,19 @@ Django==5.0.6
 django-ckeditor-5==0.2.13
 django-cloudinary-storage==0.3.0
 django-environ==0.11.2
+django-storages==1.14.4
 environ==1.0
 filelock==3.14.0
 gunicorn==23.0.0
 idna==3.10
+jmespath==1.0.1
 packaging==24.1
 pillow==10.3.0
 platformdirs==4.2.2
 psycopg2-binary==2.9.9
+python-dateutil==2.9.0.post0
 requests==2.32.3
+s3transfer==0.10.3
 six==1.16.0
 sqlparse==0.5.0
 typing_extensions==4.12.2
